--- a/src/app/components/pages/storehouse/good-list/good-list.component.html
+++ b/src/app/components/pages/storehouse/good-list/good-list.component.html
@@ -12,19 +12,19 @@
         <span>规格</span>
       </th>
       <th nz-th>
-        <span>厚度</span>
+        <span>厚度(mm)</span>
       </th>
       <th nz-th>
-        <span>重量</span>
+        <span>重量(kg)</span>
       </th>
       <th nz-th>
-        <span>长度</span>
+        <span>长度(m)</span>
       </th>
       <th nz-th>
         <span>数量</span>
       </th>
       <th nz-th>
-        <span>单价</span>
+        <span>单价(元)</span>
       </th>
       <th nz-th>
         <span>上次更新</span>
