--- a/src/app/components/pages/storehouse/goods-in/goods-in.component.html
+++ b/src/app/components/pages/storehouse/goods-in/goods-in.component.html
@@ -1,3 +1,52 @@
-<p>
-  goods-in works!
-</p>
+<nz-table #nzTable [nzDataSource]="data" [nzPageSize]="10">
+  <thead nz-thead>
+    <tr>
+      <th nz-th nzCheckbox>
+        <label nz-checkbox>
+        </label>
+      </th>
+      <th nz-th>
+        <span>货品</span>
+      </th>
+      <th nz-th>
+        <span>规格</span>
+      </th>
+      <th nz-th>
+        <span>厚度</span>
+      </th>
+      <th nz-th>
+        <span>重量</span>
+      </th>
+      <th nz-th>
+        <span>吨价</span>
+      </th>
+      <th nz-th>
+        <span>单价</span>
+      </th>
+      <th nz-th>
+        <span>日期</span>
+      </th>
+      <th nz-th>
+        <span>备注</span>
+      </th>
+    </tr>
+  </thead>
+  <tbody nz-tbody>
+    <tr nz-tbody-tr *ngFor="let data of data">
+      <td nz-td nzCheckbox>
+        <label nz-checkbox>
+        </label>
+      </td>
+      <td nz-td>
+        {{data.ProductName}}
+      </td>
+      <td nz-td>{{data.ModelName}}</td>
+      <td nz-td>{{data.Thickness}}</td>
+      <td nz-td>{{data.Weight}}</td>
+      <td nz-td>{{data.TPrice}}</td>
+      <td nz-td>{{data.UnitPrice}}</td>
+      <td nz-td>{{data.UpdateDate}}</td>
+      <td nz-td>{{data.Remarks}}</td>
+    </tr>
+  </tbody>
+</nz-table>
