--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
-<nz-layout class="layout">
-  <nz-header>
-    <app-header></app-header>
-  </nz-header>
-  <nz-layout>
-    <nz-sider [nzWidth]="200" style="background:#fff">
-      <app-sider></app-sider>
-    </nz-sider>
-    <nz-layout style="padding:0 24px 24px">
-      <nz-breadcrumb style="margin:12px 0;">
-        <app-nav-bar></app-nav-bar>
-      </nz-breadcrumb>
-      <nz-content style="background:#fff; padding: 24px; min-height: 280px;">
-        <!-- <app-main></app-main> -->
-        <router-outlet></router-outlet>
-      </nz-content>
-    </nz-layout>
-  </nz-layout>
-</nz-layout>
+<app-loading ng-if="isLoading"></app-loading>
+<app-index ng-if="!isLoading"></app-index>
+
