--- a/src/app/components/pages/bill/bill-list/bill-list.component.html
+++ b/src/app/components/pages/bill/bill-list/bill-list.component.html
@@ -1,4 +1,4 @@
-<a href="javascript:void(0);" [routerLink]="['/total']" style="margin-bottom:13px;display: inline-block;">单位列表</a><span> -> 订单列表</span>
+<a href="javascript:void(0);" [routerLink]="['home/bill']" style="margin-bottom:13px;display: inline-block;">单位列表</a><span> -> 订单列表</span>
 <form nz-form class="ant-advanced-search-form">
   <div nz-row [nzGutter]="40">
     <div nz-col [nzSpan]="8">
