--- a/src/app/components/pages/product/product/product.component.html
+++ b/src/app/components/pages/product/product/product.component.html
@@ -29,13 +29,16 @@
       <button nz-button [nzType]="'primary'" (click)="getData()">搜索</button>
       <button nz-button (click)="resetForm()">清空</button>
       <button nz-button [nzType]="'primary'" (click)="showModal()" style="float: left;">
-        新建购(销)货单位
+        新增
+      </button>
+      <button nz-button [nzType]="'primary'" (click)="showModal()" style="float: left;">
+        删除
       </button>
     </div>
   </div>
 </form>
 <!-- 模态框 -->
-<nz-modal [nzVisible]="isVisible" [nzTitle]="'新建购(销)货单位'" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" (nzOnOk)="handleOk($event)" [nzConfirmLoading]="isConfirmLoading">
+<nz-modal [nzVisible]="isVisible" [nzTitle]="'新增'" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" (nzOnOk)="handleOk($event)" [nzConfirmLoading]="isConfirmLoading">
   <ng-template #modalContent>
       <form nz-form>
           <div nz-form-item nz-row>
