--- a/src/app/components/pages/product/product/product.component.html
+++ b/src/app/components/pages/product/product/product.component.html
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    
+
 
   </div>
   <div nz-row>
@@ -68,6 +68,10 @@
   <nz-table #nzTable [nzDataSource]="data" [nzPageSize]="10">
     <thead nz-thead>
       <tr>
+        <th nz-th nzCheckbox>
+          <label nz-checkbox [(ngModel)]="_allChecked" [nzIndeterminate]="_indeterminate" (ngModelChange)="_checkAll($event)">
+          </label>
+        </th>
         <th nz-th>
           <span>产品代码</span>
         </th>
@@ -81,6 +85,10 @@
     </thead>
     <tbody nz-tbody>
       <tr nz-tbody-tr *ngFor="let data of nzTable.data">
+        <td nz-td nzCheckbox>
+          <label nz-checkbox [(ngModel)]="data.checked" (ngModelChange)="_refreshStatus($event)">
+          </label>
+        </td>
         <td nz-td>
           {{data.order}}
         </td>
