--- a/src/app/components/pages/product/product/product.component.html
+++ b/src/app/components/pages/product/product/product.component.html
@@ -64,6 +64,34 @@
 </nz-modal>
 <!-- 模态框END -->
 
+<!-- 模态框 -->
+<nz-modal [nzVisible]="putIsVisible" [nzTitle]="'产品修改'" [nzContent]="putContent" (nzOnCancel)="putHandleCancel($event)" (nzOnOk)="putHandleOk($event)"
+  [nzConfirmLoading]="putIsConfirmLoading">
+  <ng-template #putContent>
+    <form nz-form [formGroup]="putValidateForm">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.name" nz-form-item-required>产品名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" formControlName="name" [(ngModel)]="putInfo.name" name="putInfoName" [nzId]="'putInfo.name'"></nz-input>
+          <div nz-form-explain *ngIf="putValidateForm.controls.name.dirty&&putValidateForm.controls.name.hasError('required')">请输入产品名称</div>
+        </div>
+      </div>
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.order" nz-form-item-required>产品编号</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" formControlName="order" [(ngModel)]="putInfo.order" name="putInfoOrder" [nzId]="'putInfo.order'"></nz-input>
+          <div nz-form-explain *ngIf="putValidateForm.controls.order.dirty&&putValidateForm.controls.order.hasError('required')">请输入产品编号</div>
+        </div>
+      </div>
+    </form>
+  </ng-template>
+</nz-modal>
+<!-- 模态框END -->
+
 <div class="search-result-list">
   <nz-table #nzTable [nzDataSource]="data" [nzPageSize]="10">
     <thead nz-thead>
@@ -94,7 +122,7 @@
         </td>
         <td nz-td>{{data.name}}</td>
         <td nz-td>
-          <a href="">修改</a>
+          <a href="javascript:void(0)" (click)="putClick(data)" >修改</a>
         </td>
       </tr>
     </tbody>
