--- a/src/app/components/pages/product/model/model-add/model-add.component.html
+++ b/src/app/components/pages/product/model/model-add/model-add.component.html
@@ -3,17 +3,7 @@
     <div nz-col [nzSpan]="8">
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'queryProductName'">产品名称</label>
-        </div>
-        <div nz-form-control nz-col [nzSpan]="16">
-          <nz-input [nzSize]="'large'" [(ngModel)]="query.productName" name="queryProductName" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryProductName'"></nz-input>
-        </div>
-      </div>
-    </div>
-    <div nz-col [nzSpan]="8">
-      <div nz-form-item nz-row>
-        <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'queryName'">型号名称</label>
+          <label [attr.for]="'queryName'">产品名称</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="16">
           <nz-input [nzSize]="'large'" [(ngModel)]="query.name" name="queryName" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryName'"></nz-input>
@@ -23,66 +13,61 @@
     <div nz-col [nzSpan]="8">
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSpan]="5">
-          <label [attr.for]="'queryOrder'">编号</label>
+          <label [attr.for]="'queryOrder'">产品编号</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="16">
-          <nz-input [nzSize]="'large'" [(ngModel)]="query.order" name="queryOrder" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryOrder'"></nz-input>
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.order" name="queryOrder" [nzPlaceHolder]="'请输入产品序号'" [nzId]="'queryOrder'"></nz-input>
         </div>
       </div>
     </div>
+
 
   </div>
   <div nz-row>
     <div nz-col [nzSpan]="24">
       <button nz-button [nzType]="'primary'" (click)="getData()">搜索</button>
       <button nz-button (click)="resetForm()">清空</button>
-      <button nz-button [nzType]="'primary'" [routerLink]="['/home/product/model/add']" style="float: left;">
-        新增
-      </button>
-      <button nz-button [nzType]="'primary'" (click)="showConfirm()" [disabled]="!_allChecked && !_indeterminate" style="float: left;">
-        删除
-      </button>
     </div>
   </div>
 </form>
 <!-- 模态框 -->
-<nz-modal [nzVisible]="isVisible" [nzTitle]="'型号信息修改'" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" (nzOnOk)="handleOk($event)"
+<nz-modal [nzVisible]="isVisible" [nzTitle]="'新增产品'" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" (nzOnOk)="handleOk($event)"
   [nzConfirmLoading]="isConfirmLoading">
   <ng-template #modalContent>
     <form nz-form [formGroup]="validateForm">
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-          <label for="putInfo.productName" nz-form-item-required>产品名称</label>
+          <label for="addInfo.productName" nz-form-item-required>产品名称</label>
         </div>
         <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="productName" [(ngModel)]="putInfo.productName" name="putInfoProductName" [nzId]="'putInfo.productName'"></nz-input>
+          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="productName" [(ngModel)]="addInfo.productName" name="addInfoProductName" [nzId]="'addInfo.productName'"></nz-input>
           <div nz-form-explain *ngIf="validateForm.controls.productName.dirty&&validateForm.controls.productName.hasError('required')">请输入产品名称</div>
         </div>
       </div>
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-          <label for="putInfo.order" nz-form-item-required>产品编号</label>
+          <label for="addInfo.order" nz-form-item-required>产品编号</label>
         </div>
         <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="productOrder" [(ngModel)]="putInfo.productOrder" name="putInfoProductOrder" [nzId]="'putInfo.productOrder'"></nz-input>
+          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="productOrder" [(ngModel)]="addInfo.productOrder" name="addInfoProductOrder" [nzId]="'addInfo.productOrder'"></nz-input>
           <div nz-form-explain *ngIf="validateForm.controls.productOrder.dirty&&validateForm.controls.productOrder.hasError('required')">请输入产品编号</div>
         </div>
       </div>
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-          <label for="putInfo.modelName" nz-form-item-required>型号名称</label>
+          <label for="addInfo.modelName" nz-form-item-required>型号名称</label>
         </div>
         <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-          <nz-input [nzSize]="'large'" formControlName="modelName" [(ngModel)]="putInfo.modelName" name="putInfoModelName" [nzId]="'putInfo.modelName'"></nz-input>
+          <nz-input [nzSize]="'large'" formControlName="modelName" [(ngModel)]="addInfo.modelName" name="addInfoModelName" [nzId]="'addInfo.modelName'"></nz-input>
           <div nz-form-explain *ngIf="validateForm.controls.modelName.dirty&&validateForm.controls.modelName.hasError('required')">请输入型号名称</div>
         </div>
       </div>
       <div nz-form-item nz-row>
         <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
-          <label for="putInfo.modelOrder" nz-form-item-required>型号编号</label>
+          <label for="addInfo.modelOrder" nz-form-item-required>型号编号</label>
         </div>
         <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
-          <nz-input [nzSize]="'large'" formControlName="modelOrder" [(ngModel)]="putInfo.modelOrder" name="putInfoModelOrder" [nzId]="'putInfo.modelOrder'"></nz-input>
+          <nz-input [nzSize]="'large'" formControlName="modelOrder" [(ngModel)]="addInfo.modelOrder" name="addInfoModelOrder" [nzId]="'addInfo.modelOrder'"></nz-input>
           <div nz-form-explain *ngIf="validateForm.controls.modelOrder.dirty&&validateForm.controls.modelOrder.hasError('required')">请输入型号编号</div>
         </div>
       </div>
@@ -90,23 +75,16 @@
   </ng-template>
 </nz-modal>
 <!-- 模态框END -->
-
+<a href="javascript:void(0)" id="goBack" style="display: none;" [routerLink]="['/home/product/model']"></a>
 <div class="search-result-list">
   <nz-table #nzTable [nzDataSource]="data" [nzPageSize]="10">
     <thead nz-thead>
       <tr>
-        <th nz-th nzCheckbox>
-          <label nz-checkbox [(ngModel)]="_allChecked" [nzIndeterminate]="_indeterminate" (ngModelChange)="_checkAll($event)">
-          </label>
-        </th>
         <th nz-th>
-          <span>型号代码</span>
+          <span>产品代码</span>
         </th>
         <th nz-th>
           <span>产品名称</span>
-        </th>
-        <th nz-th>
-          <span>型号名称</span>
         </th>
         <th nz-th>
           <span>操作</span>
@@ -115,17 +93,12 @@
     </thead>
     <tbody nz-tbody>
       <tr nz-tbody-tr *ngFor="let data of nzTable.data">
-        <td nz-td nzCheckbox>
-          <label nz-checkbox [(ngModel)]="data.checked" (ngModelChange)="_refreshStatus($event)">
-          </label>
-        </td>
         <td nz-td>
           {{data.order}}
         </td>
-        <td nz-td>{{data.product_name}}</td>
-        <td nz-td>{{data.model_name}}</td>
+        <td nz-td>{{data.name}}</td>
         <td nz-td>
-          <a href="javascript:void(0)" (click)="putClick(data)" >修改</a>
+          <a href="javascript:void(0)" (click)="addClick(data)" >新增型号</a>
         </td>
       </tr>
     </tbody>
