--- a/src/app/components/pages/product/product/product.component.html
+++ b/src/app/components/pages/product/product/product.component.html
@@ -16,7 +16,7 @@
           <label [attr.for]="'queryOrder'">产品编号</label>
         </div>
         <div nz-form-control nz-col [nzSpan]="16">
-          <nz-input [nzSize]="'large'" [(ngModel)]="query.order" name="queryOrder" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryOrder'"></nz-input>
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.order" name="queryOrder" [nzPlaceHolder]="'请输入产品序号'" [nzId]="'queryOrder'"></nz-input>
         </div>
       </div>
     </div>
