--- a/src/app/components/pages/product/spec/spec.component.html
+++ b/src/app/components/pages/product/spec/spec.component.html
@@ -1,3 +1,169 @@
-<p>
-  spec works!
-</p>
+<form nz-form class="ant-advanced-search-form">
+  <div nz-row [nzGutter]="40">
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'queryProductName'">产品名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="16">
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.productName" name="queryProductName" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryProductName'"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'queryModelName'">型号名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="16">
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.modelName" name="queryModelName" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryModelName'"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'querySpecName'">规格名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="16">
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.specName" name="querySpecName" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'querySpecName'"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'queryOrder'">编号</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="16">
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.order" name="queryOrder" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryOrder'"></nz-input>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div nz-row>
+    <div nz-col [nzSpan]="24">
+      <button nz-button [nzType]="'primary'" (click)="getData()">搜索</button>
+      <button nz-button (click)="resetForm()">清空</button>
+      <button nz-button [nzType]="'primary'" [routerLink]="['/home/product/spec/add']" style="float: left;">
+        新增
+      </button>
+      <button nz-button [nzType]="'primary'" (click)="showConfirm()" [disabled]="!_allChecked && !_indeterminate" style="float: left;">
+        删除
+      </button>
+    </div>
+  </div>
+</form>
+<!-- 模态框 -->
+<nz-modal [nzVisible]="isVisible" [nzTitle]="'规格信息修改'" [nzContent]="modalContent" (nzOnCancel)="handleCancel($event)" (nzOnOk)="handleOk($event)"
+  [nzConfirmLoading]="isConfirmLoading">
+  <ng-template #modalContent>
+    <form nz-form [formGroup]="validateForm">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.productName" nz-form-item-required>产品名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="productName" [(ngModel)]="putInfo.productName" name="putInfoProductName"
+            [nzId]="'putInfo.productName'"></nz-input>
+          <div nz-form-explain *ngIf="validateForm.controls.productName.dirty&&validateForm.controls.productName.hasError('required')">请输入产品名称</div>
+        </div>
+      </div>
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.order" nz-form-item-required>产品编号</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="productOrder" [(ngModel)]="putInfo.productOrder" name="putInfoProductOrder"
+            [nzId]="'putInfo.productOrder'"></nz-input>
+          <div nz-form-explain *ngIf="validateForm.controls.productOrder.dirty&&validateForm.controls.productOrder.hasError('required')">请输入产品编号</div>
+        </div>
+      </div>
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.modelName" nz-form-item-required>型号名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="modelName" [(ngModel)]="putInfo.modelName" name="putInfoModelName"
+            [nzId]="'putInfo.modelName'"></nz-input>
+          <div nz-form-explain *ngIf="validateForm.controls.modelName.dirty&&validateForm.controls.modelName.hasError('required')">请输入型号名称</div>
+        </div>
+      </div>
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.modelOrder" nz-form-item-required>型号编号</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" [nzDisabled]="true" formControlName="modelOrder" [(ngModel)]="putInfo.modelOrder" name="putInfoModelOrder"
+            [nzId]="'putInfo.modelOrder'"></nz-input>
+          <div nz-form-explain *ngIf="validateForm.controls.modelOrder.dirty&&validateForm.controls.modelOrder.hasError('required')">请输入型号编号</div>
+        </div>
+      </div>
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.specName" nz-form-item-required>规格名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" formControlName="specName" [(ngModel)]="putInfo.specName" name="putInfoSpecName" [nzId]="'putInfo.specName'"></nz-input>
+          <div nz-form-explain *ngIf="validateForm.controls.specName.dirty&&validateForm.controls.specName.hasError('required')">请输入型号名称</div>
+        </div>
+      </div>
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSm]="6" [nzXs]="24">
+          <label for="putInfo.specOrder" nz-form-item-required>规格编号</label>
+        </div>
+        <div nz-form-control nz-col [nzSm]="14" [nzXs]="24" nzHasFeedback>
+          <nz-input [nzSize]="'large'" formControlName="specOrder" [(ngModel)]="putInfo.specOrder" name="putInfoSpecOrder" [nzId]="'putInfo.specOrder'"></nz-input>
+          <div nz-form-explain *ngIf="validateForm.controls.specOrder.dirty&&validateForm.controls.specOrder.hasError('required')">请输入型号编号</div>
+        </div>
+      </div>
+    </form>
+  </ng-template>
+</nz-modal>
+<!-- 模态框END -->
+
+<div class="search-result-list">
+  <nz-table #nzTable [nzDataSource]="data" [nzPageSize]="10">
+    <thead nz-thead>
+      <tr>
+        <th nz-th nzCheckbox>
+          <label nz-checkbox [(ngModel)]="_allChecked" [nzIndeterminate]="_indeterminate" (ngModelChange)="_checkAll($event)">
+          </label>
+        </th>
+        <th nz-th>
+          <span>规格代码</span>
+        </th>
+        <th nz-th>
+          <span>产品名称</span>
+        </th>
+        <th nz-th>
+          <span>型号名称</span>
+        </th>
+        <th nz-th>
+          <span>规格名称</span>
+        </th>
+        <th nz-th>
+          <span>操作</span>
+        </th>
+      </tr>
+    </thead>
+    <tbody nz-tbody>
+      <tr nz-tbody-tr *ngFor="let data of nzTable.data">
+        <td nz-td nzCheckbox>
+          <label nz-checkbox [(ngModel)]="data.checked" (ngModelChange)="_refreshStatus($event)">
+          </label>
+        </td>
+        <td nz-td>
+          {{data.order}}
+        </td>
+        <td nz-td>{{data.product_name}}</td>
+        <td nz-td>{{data.model_name}}</td>
+        <td nz-td>{{data.spec_name}}</td>
+        <td nz-td>
+          <a href="javascript:void(0)" (click)="putClick(data)">修改</a>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
+</div>
