--- a/src/app/components/pages/storehouse/good-list/good-list.component.html
+++ b/src/app/components/pages/storehouse/good-list/good-list.component.html
@@ -1,56 +1,86 @@
+<form nz-form class="ant-advanced-search-form">
+  <div nz-row [nzGutter]="40">
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'queryProductName'">产品名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="16">
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.productName" name="queryProductName" [nzPlaceHolder]="'请输入产品名称'" [nzId]="'queryProductName'"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'queryModelName'">型号名称</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="16">
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.modelName" name="queryModelName" [nzPlaceHolder]="'请输入型号名称'" [nzId]="'queryModelName'"></nz-input>
+        </div>
+      </div>
+    </div>
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'queryOrder'">编号</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="16">
+          <nz-input [nzSize]="'large'" [(ngModel)]="query.order" name="queryOrder" [nzPlaceHolder]="'请输入编号'" [nzId]="'queryOrder'"></nz-input>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div nz-row>
+    <div nz-col [nzSpan]="24">
+      <button nz-button [nzType]="'primary'" (click)="getData()">搜索</button>
+      <button nz-button (click)="resetForm()">清空</button>
+    </div>
+  </div>
+</form>
+
 <nz-table #nzTable [nzDataSource]="data" [nzPageSize]="10">
   <thead nz-thead>
     <tr>
-      <th nz-th nzCheckbox>
-        <label nz-checkbox>
-        </label>
+      <th nz-th>
+        <span>编号</span>
       </th>
       <th nz-th>
-        <span>类型</span>
+        <span>产品</span>
+      </th>
+      <th nz-th>
+        <span>型号</span>
       </th>
       <th nz-th>
         <span>规格</span>
       </th>
       <th nz-th>
-        <span>厚度(mm)</span>
-      </th>
-      <th nz-th>
-        <span>重量(kg)</span>
-      </th>
-      <th nz-th>
-        <span>长度(m)</span>
-      </th>
-      <th nz-th>
         <span>数量</span>
       </th>
       <th nz-th>
-        <span>单价(元)</span>
+        <span>单价</span>
+      </th>
+      <th nz-th>
+        <span>吨价</span>
       </th>
       <th nz-th>
         <span>上次更新</span>
-      </th>
-      <th nz-th>
-        <span>备注</span>
       </th>
     </tr>
   </thead>
   <tbody nz-tbody>
     <tr nz-tbody-tr *ngFor="let data of data">
-      <td nz-td nzCheckbox>
-        <label nz-checkbox>
-        </label>
-      </td>
+      <td nz-td>{{data.order}}</td>
       <td nz-td>
-        <a>{{data.productName}}</a>
+        <a>{{data.product_name}}</a>
       </td>
-      <td nz-td>{{data.ModelName}}</td>
-      <td nz-td>{{data.Thickness}}</td>
-      <td nz-td>{{data.Weight}}</td>
-      <td nz-td>{{data.Length}}</td>
-      <td nz-td>{{data.Number}}</td>
-      <td nz-td>{{data.UnitPrice}}</td>
-      <td nz-td>{{data.UpdateDate}}</td>
-      <td nz-td>{{data.Remarks}}</td>
+      <td nz-td>{{data.model_name}}</td>
+      <td nz-td>{{data.spec_name}}</td>
+      <td nz-td>{{data.number}}</td>
+      <td nz-td>{{data.unit_price}}</td>
+      <td nz-td>{{data.t_price}}</td>
+      <td nz-td>{{data.update_date | date:'yyyy-MM-dd'}}</td>
     </tr>
   </tbody>
 </nz-table>
