--- a/src/app/components/pages/storehouse/goods-out/goods-out.component.html
+++ b/src/app/components/pages/storehouse/goods-out/goods-out.component.html
@@ -69,7 +69,7 @@
     </tr>
   </thead>
   <tbody nz-tbody>
-    <tr nz-tbody-tr *ngFor="let data of data">
+    <tr nz-tbody-tr *ngFor="let data of nzTable.data">
       <td nz-td nzCheckbox>
         <label nz-checkbox>
         </label>
