--- a/src/app/components/pages/bill/bill-add/bill-add.component.html
+++ b/src/app/components/pages/bill/bill-add/bill-add.component.html
@@ -43,6 +43,16 @@
         </div>
       </div>
     </div>
+    <div nz-col [nzSpan]="8">
+      <div nz-form-item nz-row>
+        <div nz-form-label nz-col [nzSpan]="5">
+          <label [attr.for]="'queryDate'">选择日期</label>
+        </div>
+        <div nz-form-control nz-col [nzSpan]="19">
+          <nz-datepicker [(ngModel)]="addInfo._date" name="addInfoDate" [nzPlaceHolder]="'请选择账单日期'"></nz-datepicker>
+        </div>        
+      </div>
+    </div>
   </div>
   <div nz-row>
       <div nz-col [nzSpan]="24">
